Version 1.15.0  (September 2023)

Upgrade Instructions

  To install updated dependencies, run:
    pip install -r requirements.txt --no-deps --upgrade --upgrade-strategy=only-if-needed
  Run: `paster ensure_index development.ini` in Allura dir

  If switching to a new version of Python, you will need to make a completely new python virtual environment,
  and run `pip install ...` in it, and then use it to run Allura.

  If using docker, rebuild the allura image and restart containers.

Major New Features
 * added support for Python 3.8 through 3.11
 * introduced Content-Security-Policy headers

Security
 * Allow csp_form_actions environ override; more obvious warning if github oauth .ini settings missing
 * better defaults for CSP to avoid warnings when developing
 * [#8470] Add CSP Headers
 * [#8479] CSP Headers Add Support For script-src
 * [#8510] Add HTTP Header Add Permissions-Policy
 * [#8511] Add HTTP Header Referrer-Policy
 * [#8504] CSP Headers Add Support For script-src-attr

SEO
 * noindex,follow for ticket milestone pages
 * h1 title improvement for wiki sections browse pages and browse labels
 * Make canonical tag on activities pages overridable
 * [#8492] Update noindex Logic for User Profiles
 * [#8464] Add noindex, follow on List Tools
 * [#8469] Add Missing Canonical Tag
 * [#8477] More Canonical Urls

Performance
 * chunked_find: avoid redundant query at end
 * performance optimizations related to anonymous()
 * speedup: private_project for anonymous
 * [#8497] ForgeMarkdown speedup

Tickets
 * fix error on feed url for non-existant ticket
 * remove ticket history records when uninstalling a ticket tool

Wikis
 * fix failing trac wiki tests that were previously unused and apparently wrong
 * [#8471] check for comments when setting wiki noindex

General
 * Move GA snippet down slightly
 * added noindex meta tag to new tickets page
 * use error template for 410 Gone statuses too
 * ignore a pure reformatting change
 * add @ to url autolink pattern